<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <RelativeLayout
            android:id="@+id/car_control_layout"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_below="@+id/video"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="visible">

            <Button
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:contentDescription="@string/forward"
                android:text="@string/forward" />

            <RelativeLayout
                android:id="@+id/layout_button_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical">

                <Button
                    android:id="@+id/left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:contentDescription="@string/left"
                    android:text="@string/left"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:id="@+id/stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/stop"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:contentDescription="@string/right"
                    android:text="@string/right"
                    tools:ignore="ButtonStyle" />
            </RelativeLayout>

            <Button
                android:id="@+id/backward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:focusable="true"
                android:text="@string/backward" />

        </RelativeLayout>


        <FrameLayout
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <SurfaceView
                android:id="@+id/surfaceView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null" />
        </FrameLayout>
    </RelativeLayout>
</layout>